# openflite

./: Cargo.toml
.github/workflows/: ci.yml
msfs-bridge/: README.md  package.json  tsconfig.json
msfs-bridge/src/: index.ts
openflite-connect/: Cargo.toml
openflite-connect/src/: dummy.rs  lib.rs  msfs.rs  xplane.rs
openflite-core/: Cargo.toml
openflite-core/src/: config.rs  device.rs  flash.rs  lib.rs  mapping.rs  protocol.rs
openflite-gui/: Cargo.toml
openflite-gui/src/: main.rs  styles.rs
tests/: integration.rs
